--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="heading">Accordion</h1>
+      <h1 class="heading">Accordions</h1>
       <!------------------ Box 1 ---------------------->
       <div onclick="modify(id)" class="box" id="box1">
         <div class="headContainer">
